--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hidapi"]
-	path = hidapi
-	url = git://github.com/libusb/hidapi.git
+[submodule "etc/ltunify"]
+	path = etc/ltunify
+	url = https://git.lekensteyn.nl/ltunify.git
