[working] cycling of colors and off works alright. Uses depreceated libusb library which is why slow writing. Solid color and DPI are still dependent on the hash value. Brought in extra library for parsing cmdline. Divided etc/ session wise with extra logs added.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "etc/ltunify"]
 	path = etc/ltunify
 	url = https://git.lekensteyn.nl/ltunify.git
+[submodule "include/gopt"]
+	path = include/gopt
+	url = https://github.com/thoni56/gopt
